objects/slackv2__Subscription_Condition__c.object
<CustomObject>
    <fields>
        <fullName>slackv2__Field_Api_Name__c</fullName>
        <label>Field Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Operator__c</fullName>
        <label>Operator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slackv2__Subscription_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription Type</label>
        <referenceTo>slackv2__Subscription_Type__c</referenceTo>
        <relationshipName>Subscription_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>slackv2__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>